tests/dataset/tpc-ds/compiler/pl/q19.error
run: exit status 2
ERROR: /tmp/q19.pl:58: user:main '<meta-call>'/1: Unknown procedure: substr/4
